--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,13 @@
 
         const ctx = canvas.getContext("2d");
 
-        instance.exports.go();
-
-        ctx.putImageData(image, 0, 0);
+        const render = () => {
+            instance.exports.go();
+            ctx.putImageData(image, 0, 0);
+            requestAnimationFrame(render);
+        };
+        
+        render();
       }
 
       init();
